src/test/resources/private/typechecking/fail/main_structure/fail03_withMethodsAndMembers.jova
class Main {
  private int a;
  private string b;

  public int func() {
    return 0;
  }

  public int another_fun(){
	return 1;
  }
}